# otoshi-launcher-frontend

./: .env.production  .gitignore  debug.ps1  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  tsconfig.tsbuildinfo  vercel.json  vite.config.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial.sql  002_downloads.sql  003_download_state.sql  004_download_runtime.sql  005_download_v2.sql  006_self_heal_v2.sql
src-tauri/src/: backend_sidecar.rs  errors.rs  logging.rs  lua_bundler.rs  main.rs  models.rs
src-tauri/src/commands/: auth.rs  crack.rs  debug.rs  discovery.rs  distribute.rs  download.rs  download_v2.rs  game.rs  inventory.rs  lua.rs  mod.rs  oauth.rs  overlay.rs  policy.rs  properties.rs  remote.rs  security.rs  security_v2.rs  self_heal.rs  social.rs  steam_extended.rs  streaming.rs  system.rs  workshop.rs
src-tauri/src/db/: mod.rs  queries.rs
src-tauri/src/services/: achievement_service.rs  api_client.rs  artwork_cache.rs  auth_service.rs  cloud_save_service.rs  crack_manager.rs  discovery_service.rs  download_manager.rs  download_manager_v2.rs  download_service.rs  game_runtime_service.rs  inventory_service.rs  library_service.rs  license_service.rs  manifest_service.rs  mod.rs  overlay_service.rs  peer_cache_server.rs  peer_coordination.rs  remote_download_service.rs  security_guard.rs  self_heal.rs  steam_prefetch_worker.rs  streaming_service.rs  telemetry_service.rs  workshop_service.rs
src-tauri/src/utils/: crypto.rs  file.rs  mod.rs  paths.rs
(+261 files in other folders)
